[tool.poetry]
name = "titanic"
version = "0.1.0"
description = ""
authors = ["Oliver Bonham-Carter <obonhamcarter@allegheny.edu>"]
readme = "README.md"

[tool.poetry.scripts]
titanic = "titanic.main:cli"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.1"
typer = "^0.12.3"
black = "^24.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
